--- a/PhotronAPI.vcxproj
+++ b/PhotronAPI.vcxproj
@@ -138,7 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PhotronAPI.cpp" />
+    <ClCompile Include="visSIFT.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
