--- a/PhotronAPI.vcxproj.filters
+++ b/PhotronAPI.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PhotronAPI.cpp">
+    <ClCompile Include="visSIFT.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
